@@ -3,3 +3,11 @@
 ## Overview
 
 Translator from poST laguage programs to its Isabelle/HOL model.
+
+## Running
+To launch translator use: ``java --add-opens java.base/java.lang=ALL-UNNAMED -jar post2isabelle.jar [key/value]``
+
+| key | value                     |
+|-----|---------------------------|
+| -s  | path to source .post file |
+| -o  | output destination        |
